# toxic

./: .cirrus.yml  .gitignore  .restyled.yaml  .travis.yml  AUTHORS  BUILD.bazel  CHANGELOG.md  INSTALL.md  Makefile  Makefile.am  README.md  altacc.tox  astylerc  configure.ac  gdb.txt  test  toxic.conf.example
.circleci/: config.yml
.github/: FUNDING.yml  settings.yml
.github/workflows/: checks.yml  ci.yml  coverity-scan.yml  draft.yml  release.yml
.reviewable/: completion.js  settings.yaml
apidoc/python/: Makefile
apidoc/python/source/: conf.py  examples.rst  fortune.py  index.rst  intro.rst  reference.rst
cfg/: FreeBSD.mk  Linux.mk  av.mk  check_features.mk  global_vars.mk  help.mk  install.mk  sound_notifications.mk
cfg/checks/: audio.mk  av.mk  check_features.mk  desktop_notifications.mk  games.mk  python.mk  qr.mk  qr_png.mk  sound_notifications.mk  tox_experimental.mk  video.mk  x11.mk
cfg/systems/: BSD.mk  Darwin.mk  FreeBSD.mk  Linux.mk
cfg/targets/: config.mk  doc.mk  help.mk  install.mk  uninstall.mk
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  toxic.cron.d.ex  toxic.default.ex  toxic.doc-base.EX
debian/patches/: series  update-authors-and-makefile
doc/: Makefile  toxic.1  toxic.1.asc  toxic.conf.5  toxic.conf.5.asc
fun/: unixtime.patch
misc/: DHTnodes  DHTservers  DNSservers  Makefile.am  nameservers  toxic.conf  toxic.conf.example  toxic.desktop
opencv_demo/: Makefile  README.md  capture_playback.c
script/: build-minimal-static-toxic.sh
sounds/: license
src/: Makefile  api.c  api.h  audio_call.c  audio_call.h  audio_device.c  audio_device.h  autocomplete.c  autocomplete.h  avatars.c  avatars.h  bootstrap.c  bootstrap.h  chat.c  chat.h  chat_commands.c  chat_commands.h  commands.c  commands.h  conference.c  conference.h  conference_commands.c  conference_commands.h  configdir.c  configdir.h  curl_util.c  curl_util.h  device.c  device.h  dhtstatus.c  dhtstatus.h  dns.c  dns.h  execute.c  execute.h  file_senders.c  file_senders.h  file_transfers.c  file_transfers.h  friendlist.c  (+79 more)
test/: .gitignore  Dockerfile  README.md  package.json  run  toxic.test.ts
test/__snapshots__/: toxic.test.ts.snap
translations/: en.mo  en.po  it.mo  it.po  toxic.pot
translations/tools/: create_mo.sh  create_po.sh  update_po.sh  update_pot.sh
