load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/project:build_defs.bzl", "project")

project()

cc_binary(
    name = "toxic",
    srcs = glob(
        [
            "src/*.c",
            "src/*.h",
        ],
        exclude = ["src/video*"],
    ) + select({
        "//tools/config:linux": glob(["src/video*"]),
        "//tools/config:osx": [],
    }),
    copts = [
        "-DAUDIO",
        "-DPACKAGE_DATADIR='\"data\"'",
        "-DPYTHON",
        "-DQRCODE",
    ] + select({
        "//tools/config:linux": ["-DVIDEO"],
        "//tools/config:osx": [],
    }),
    deps = [
        "//c-toxcore",
        "@curl",
        "@libconfig",
        "@libqrencode",
        "@libvpx",
        "@ncurses",
        "@openal",
        "@python3//:python",
    ] + select({
        "//tools/config:linux": ["@x11"],
        "//tools/config:osx": [],
    }),
)
